// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should be ok 1`] = `
Object {
  "bar": "bar",
  "foo": "FOO",
}
`;

exports[`Should be ok 2`] = `
Object {
  "bar": "bar",
  "foo": "foo",
}
`;

exports[`Should be ok 3`] = `
Object {
  "__rm": Array [
    "bar",
  ],
  "foo": "FOO",
}
`;
